--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -229,7 +229,7 @@
       "iban": "IBAN",
       "bankReference": "Référence",
       "optional": "Optionnel",
-      "yourName": "Votre om d'entreprise ou personnel",
+      "yourName": "Votre nom d'entreprise ou personnel",
       "ownerName": "Nom du propriétaire",
       "yourAddress": "Votre adresse",
       "ownerAddress": "Adresse",
