--- a/src/assets/translations/de.json
+++ b/src/assets/translations/de.json
@@ -1,15 +1,15 @@
 {
   "common": {
-    "login": "Anmeldung",
+    "login": "Anmelden",
     "enabled": "Aktiviert",
-    "disabled": "Behinderte",
+    "disabled": "Deaktiviert",
     "paid": "Bezahlt",
-    "pending": "Anhängig",
+    "pending": "Ausstehend",
     "expired": "Abgelaufen",
     "inProgress": "In Arbeit",
-    "edit": "bearbeiten",
-    "submit": "Einreichen",
-    "confirm": "Bestätigen Sie",
+    "edit": "Bearbeiten",
+    "submit": "Absenden",
+    "confirm": "Bestätigen",
     "wallet": "Brieftasche",
     "admin": "Verwaltung",
     "employee": "Mitarbeiter",
@@ -30,8 +30,8 @@
       "introTitle": "Akzeptieren Sie {{bitcoin}} Zahlungen",
       "easily": "Einfach",
       "worldwide": "Weltweit",
-      "nonCustodial": "Ohne Freiheitsentzug",
-      "noKyc": "Kein KYC",
+      "nonCustodial": "Ohne Verwahrung",
+      "noKyc": "Ohne KYC",
       "in1minute": "In 1 Minute",
       "createAccount": "Konto erstellen",
       "orConnectBy": "oder verbinden durch",
@@ -56,16 +56,16 @@
       "enter12wordsDescription2": "Bitte stellen Sie sicher, dass Sie Ihre Seed-Phrase auf einem verifizierten Open-Source-Build eingeben.",
       "enter12wordsDescription3": "Dennoch gilt diese Verbindungsmethode nicht als 100% sicher, da Ihr Gerät mit dem Internet verbunden und somit angreifbar ist. Wir sind nicht verantwortlich für Verluste, die durch die Verwendung dieser Anmeldemethode verursacht werden.",
       "error": {
-        "invalidSignature": "Ungültige Unterschrift",
+        "invalidSignature": "Ungültige Signatur",
         "invalidWord": "Ungültiges Wort"
       }
     },
     "signup": {
-      "title": "Anmeldung",
+      "title": "Anmelden",
       "yourAccountName": "Ihr Kontoname",
       "accountName": "Name des Kontos",
       "accountNameInvalid": "Bitte geben Sie einen gültigen Namen an",
-      "yourEmail": "Deine E-Mail",
+      "yourEmail": "Ihre E-Mail",
       "emailInvalid": "Bitte geben Sie eine gültige E-Mail Adresse an",
       "email": "E-Mail",
       "emailDescription": "Wird nur verwendet, um Ihnen wichtige Informationen über Ihr Konto zu senden. Wird niemals an Dritte weitergegeben.",
@@ -76,14 +76,14 @@
       "currency": "Währung",
       "currencyDescription": "Die Standardwährung für Ihr Unternehmen",
       "referralCode": "Empfehlungscode",
-      "optional": "Optional",
-      "referralCodeDescription": "Wenn Sie jemand zu Swiss Bitcoin Pay gebracht hat, schreiben Sie bitte den Empfehlungscode hier",
+      "optionnal": "Optional",
+      "referralCodeDescription": "Wenn Sie jemand zu Swiss Bitcoin Pay gebracht hat, geben Sie bitte den Empfehlungscode hier ein",
       "submitDescription1": "Mit der Erstellung Ihres Kontos akzeptieren Sie unsere",
       "submitDescription2": "und",
       "termsAndConditions": "Bedingungen und Konditionen",
       "privacyPolicy": "Datenschutzbestimmungen",
-      "letter": "Schreiben",
-      "number": "Nummer",
+      "letter": "Buchstabe",
+      "number": "Zahl",
       "size8to64": "8-64 Länge",
       "errorDescription": "Fehler beim Erstellen Ihres Kontos. Bitte versuchen Sie es später erneut oder kontaktieren Sie uns unter hello@swiss-bitcoin-pay.ch",
       "error": {
@@ -106,7 +106,7 @@
       "downloadApp": "Die App herunterladen",
       "note": "Hinweis",
       "atmAccount": "ATM-Konto",
-      "allowWithdraw": "Rückzug zulassen",
+      "allowWithdraw": "Abheben zulassen",
       "cannotGoHigher": "Der Höchstbetrag beträgt {{maxAmount}}",
       "addToHomeScreen": "Zum Startbildschirm hinzufügen"
     },
@@ -115,23 +115,23 @@
       "fetchingInvoice": "Rechnung abrufen",
       "invoiceQrTitle": "QR-Code der Rechnung",
       "invoiceQr": "Rufen Sie diese Rechnung auf einem anderen Gerät auf, indem Sie diesen QR-Code scannen",
-      "save": "Speichern Sie",
+      "save": "Speichern",
       "status": "Status",
       "timeLeft": "Verbleibende Zeit",
       "amount": "Betrag",
       "paidOn": "Bezahlt am",
       "awaitingPayment": "Erwartete Zahlung",
       "returningToTerminal": "Rückkehr zum Terminal",
-      "withdrawSuccess": "Rücknahme erfolgt",
+      "withdrawSuccess": "Abhebung erfolgt",
       "confirmations": "Bestätigungen",
-      "redirectingYou": "Sie umzuleiten",
+      "redirectingYou": "Sie werden umgeleitet",
       "invalidInvoiceId": "Ungültige Rechnungs-ID",
       "paidWith": "Bezahlt mit",
       "transactionId": "Transaktions-ID",
-      "openWallet": "Brieftasche öffnen",
+      "openWallet": "Wallet öffnen",
       "copy": "Kopieren",
       "pendingConfirmations": "Ausstehende Bestätigungen",
-      "invoiceExpired": "Rechnung ist abgelaufen",
+      "invoiceExpired": "Abgelaufene Rechnung",
       "invoicePaid": "Bezahlte Rechnung",
       "tapAnywhereToSkip": "Tippen Sie auf eine beliebige Stelle zum Überspringen",
       "returnToWebsite": "Zurück zur Website",
@@ -147,8 +147,8 @@
       "previous": "Vorherige",
       "noData": "Keine Daten",
       "total": "Insgesamt",
-      "me": "Ich",
-      "myEmployees": "Meine Mitarbeiter"
+      "me": "Mich",
+      "myEmployees": "Meine Angestellten"
     },
     "settings": {
       "title": "Einstellungen",
@@ -173,10 +173,10 @@
       "allInBtc": "100% in Bitcoin",
       "allInFiat": "100% in {{currency}}",
       "percentInBtcAndFiat": "{{btcPercent}}% in Bitcoin | {{fiatPercent}}% in {{currency}}",
-      "wallet": "Brieftasche",
-      "accessWallet": "Zugang Brieftasche",
+      "wallet": "Wallet",
+      "accessWallet": "Zugang zur Wallet",
       "contactSupport": "Kontakt zum Support",
-      "logout": "Abmeldung",
+      "logout": "Abmelden",
       "confirmLogout": "Bestätigen Sie die Abmeldung",
       "confirmLogoutDescription": "Nach der Abmeldung müssen Sie den Aktivierungscode erneut einscannen oder eine Verbindung mit den Anmeldedaten herstellen",
       "logoutSuccessful": "Erfolgreiche Trennung der Verbindung"
@@ -190,34 +190,34 @@
       "feesAnyVolume": "Jedes Volumen",
       "feesDetailsBelow": "Volumen &lt; {{amount}} / Monat",
       "feesDetailsAbove": "Volumen &gt; {{amount}} / Monat",
-      "cryptoSignature": "Erforderliche Unterschrift",
+      "cryptoSignature": "Erforderliche Signatur",
       "instantTransfer": "Sofortige Übertragung",
       "dailyTransfer": "Täglicher Transfer",
       "bitcoinSettings": "Bitcoin-Einstellungen",
-      "yourWallet": "Ihr Portemonnaie",
-      "createWallet": "Brieftasche erstellen",
-      "bitcoinPayoutWallet": "Bitcoin Auszahlung Wallet",
-      "localWallet": "Lokale Geldbörse",
+      "yourWallet": "Ihre Wallet",
+      "createWallet": "Wallet erstellen",
+      "bitcoinPayoutWallet": "Bitcoin Auszahlungs-Wallet",
+      "localWallet": "Lokale Wallet",
       "alreadyVerifiedAddresses": "Bereits verifizierte Adressen",
       "lightningAddress": "LN-Adresse",
       "nextAddresses": "Nächste Adressen",
       "recommended": "empfohlen",
-      "messageToSign": "Nachricht zum Unterschreiben",
+      "messageToSign": "Nachricht zum Signieren",
       "messageToSignDetails": "Signieren Sie diese Nachricht mit der von Ihnen eingegebenen Bitcoin-Wallet",
-      "yourSignature": "Ihre Unterschrift",
-      "yourSignatureDetails": "Unterschrift, die Sie aus Ihrer Brieftasche erhalten haben",
-      "invalidSignature": "Ungültige Unterschrift",
-      "payInvoiceToCertify": "Bezahlen Sie diese 1-Satz-Rechnung, um zu bestätigen, dass Sie Ihre Lightning-Adresse kontrollieren.",
-      "openWallet": "Brieftasche öffnen",
+      "yourSignature": "Ihre Signatur",
+      "yourSignatureDetails": "Signatur, die Sie aus Ihrer Wallet erhalten haben",
+      "invalidSignature": "Ungültige Signatur",
+      "payInvoiceToCertify": "Bezahlen Sie diese 1-Sat-Rechnung, um zu bestätigen, dass Sie Ihre Lightning-Adresse kontrollieren.",
+      "openWallet": "Wallet öffnen",
       "invoicePaid": "Adresse geprüft",
-      "signWithAddress": "Schild mit Adresse",
+      "signWithAddress": "Signiere mit Adresse",
       "signWithAddressDetails": "Signieren Sie die Nachricht mit dieser Bitcoin-Adresse",
       "receiveInBtcDescription1": "Alle Bitcoins, die Sie über Swiss Bitcoin Pay aufladen, werden an die von Ihnen angegebene Adresse gesendet.",
       "receiveInBtcDescription2": "Lightning zu Onchain Konvertierungen und Miner-Gebühren sind für Sie immer kostenlos.",
       "receiveInBtcDescription3": "Die Auszahlung erfolgt jeden Tag um 0:00 UTC. Die Mindestschwelle liegt bei 1000 Sats.",
       "receiveInBtcDescription3Lightning": "Ihre Bitcoins werden nach jeder Zahlung sofort an Ihre Lightning-Adresse gesendet. Stellen Sie sicher, dass Ihr Node gut verbunden ist.",
-      "receiveInBtcDescription4": "Eine kryptografische Signatur Ihrer Bitcoin-Brieftasche ist erforderlich, um den Besitz nachzuweisen.",
-      "receiveInBankDescription1": "Alle Bitcoins, die Sie über Swiss Bitcoin Pay aufladen, werden für {{currency}} verkauft und dann automatisch auf Ihr Bankkonto durch unseren Partner",
+      "receiveInBtcDescription4": "Eine kryptografische Signatur Ihrer Bitcoin-Wallet ist erforderlich, um den Besitz nachzuweisen.",
+      "receiveInBankDescription1": "Alle Bitcoins, die Sie über Swiss Bitcoin Pay aufladen, werden für {{currency}} verkauft und dann automatisch durch unseren Partner auf Ihr Bankkonto überwiesen",
       "bankSettings": "Bankeinstellungen",
       "receiveInBankDescription2Instant": "Die Zahlung auf Ihr Bankkonto erfolgt automatisch, sobald Ihr Guthaben den Mindestbetrag von {{formattedAmount}} übersteigt.",
       "receiveInBankDescription2Batched": "Die Zahlung auf Ihr Bankkonto erfolgt automatisch jeden Tag um 0:00 UTC, wenn Ihr Guthaben den Mindestbetrag von {{formattedAmount}} übersteigt.",
@@ -225,10 +225,10 @@
       "receiveInBankDescription3": "Unterhalb dieses Betrags ist es auch möglich, eine Überweisung manuell auszulösen, gegen eine Gebühr von {{formattedAmount}}.",
       "receiveInBankDescriptionInstantSepa": "Wenn Ihre Bank Instant SEPA-kompatibel ist, erhalten Sie Ihre Zahlungen sofort auf Ihr Bankkonto.",
       "receiveInBankDescriptionFasterPayments": "Die Zahlung auf Ihr Bankkonto in GBP erfolgt sofort über Faster Payments.",
-      "createYourBitcoinWallet": "Erstellen Sie Ihre Bitcoin-Brieftasche",
+      "createYourBitcoinWallet": "Erstellen Sie Ihre Bitcoin-Wallet",
       "iban": "IBAN",
       "bankReference": "Bankverbindung",
-      "optional": "Optional",
+      "optionnal": "Optional",
       "yourName": "Ihr Firmen- oder Personenname",
       "ownerName": "Name des Eigentümers",
       "yourAddress": "Ihre Adresse",
@@ -243,16 +243,16 @@
       "yourIban": "Ihre IBAN",
       "ibanInvalid": "Ungültige IBAN",
       "zipInvalid": "Ungültige Postleitzahl",
-      "submit": "Einreichen",
+      "submit": "Absenden",
       "patchSettingNeedsEmailValidation": "Bestätigen Sie die neuen Einstellungen mit der E-Mail, die Sie erhalten haben."
     },
     "wallet": {
-      "title": "Onchain-Brieftasche",
+      "title": "Onchain-Wallet",
       "balance": "Bilanz",
       "pending": "Anhängig",
       "transactions": "Transaktionen",
       "send": "Senden (demnächst)",
-      "receive": "Empfangen Sie",
+      "receive": "Empfangen",
       "sent": "Gesendet",
       "received": "Empfangen",
       "receiveInfo": "Mit dieser unbenutzten Adresse erhalten Sie Bitcoins direkt auf Ihr lokales Wallet. Zahlungen, die direkt auf diese Adresse eingehen, werden von Swiss Bitcoin Pay nicht verfolgt und sind daher nicht gebührenpflichtig und nicht im Export enthalten.",
@@ -262,22 +262,22 @@
       "fastestFee": "Schnellste",
       "halfHourFee": "Mittel",
       "hourFee": "Langsam",
-      "economyFee": "Wirtschaft"
+      "economyFee": "Sparsam"
     }
   },
   "createWalletModal": {
     "continue": "Weiter",
-    "showMySeedPhrase": "Zeige meinen Samen-Satz",
-    "IwroteMyWords": "Ich habe meine 12 Worte geschrieben",
+    "showMySeedPhrase": "Zeige meine Seed Phrase",
+    "IwroteMyWords": "Ich habe meine 12 Worte aufgeschrieben",
     "validateWords": "Wörter validieren",
     "returnToForm": "Zurück zum Formular",
     "autoSignatureError": "Fehlermeldung beim automatischen Signieren",
     "step1": {
       "instructions_title": "Warnung vor Haftungsausschluss",
-      "instructions1": "Wenn Sie eine Bitcoin-Brieftasche besitzen, sind Sie allein für sie verantwortlich.",
+      "instructions1": "Wenn Sie eine Bitcoin-Wallet besitzen, sind Sie allein für sie verantwortlich.",
       "instructions2": "Nehmen Sie sich einen Moment Zeit, um diese kurze Einführung sorgfältig zu lesen, damit Sie verstehen, was sie wirklich bedeutet, denn sonst besteht die Gefahr, dass Ihr Geld verloren geht oder gestohlen wird.",
       "instructions3": "Bitte beachten Sie, dass in einem solchen Fall niemand, auch nicht Swiss Bitcoin Pay, Ihnen helfen kann, Ihr Geld wiederzubekommen.",
-      "instructions4": "Wir speichern keine Kopie Ihrer Brieftaschenschlüssel oder Ihres Geldes. Wir können nicht auf sie zugreifen oder sie wiederherstellen. Sie sind allein für die Sicherheit Ihres Wallets verantwortlich."
+      "instructions4": "Wir speichern keine Kopie Ihrer Walletschlüssel oder Ihres Geldes. Wir können nicht auf sie zugreifen oder sie wiederherstellen. Sie sind allein für die Sicherheit Ihres Wallets verantwortlich."
     },
     "step2": {
       "instructions1": "Im nächsten Schritt zeigen wir Ihnen Ihre 12 Wörter (auch Seed-Phrase genannt) an. Diese geheime Seed-Phrase ist der einzige Weg, um an Ihre Bitcoins zu gelangen.",
@@ -286,26 +286,26 @@
       "instructions4": "Wenn Sie Ihre Seed Phrase verlieren, ist Ihr Geld für immer verloren. Es ist daher absolut wichtig, dass Sie Ihre Seed Phrase ordnungsgemäß aufbewahren und schützen.",
       "instructions5": "Speichern Sie sie niemals in einer Cloud, auf Ihrem Telefon oder Computer. Jedes Gerät, das mit dem Internet verbunden ist, ist angreifbar!",
       "instructions6": "Geben Sie Ihre Seed-Phrase niemals an Dritte weiter. Jede Person, die Zugang zu Ihrer Seed-Phrase hat, kann Ihr gesamtes Kapital stehlen.",
-      "agree1": "Mir ist klar, dass ich allein für die Aufbewahrung meiner Samenphrase verantwortlich bin.",
+      "agree1": "Mir ist klar, dass ich allein für die Aufbewahrung meiner Seed Phrase verantwortlich bin.",
       "agree2": "Mir ist bewusst, dass der Verlust oder der Diebstahl meiner Seed Phrase den Verlust von Geldern zur Folge hat.",
       "agree3": "Ich verstehe, dass niemand mir helfen kann, mein Geld zurückzubekommen, wenn ich meine Seed Phrase verliere, nicht einmal Swiss Bitcoin Pay."
     },
     "step3": {
       "instructions1": "Schreiben Sie Ihre 12 Wörter auf und achten Sie darauf, dass sie gut lesbar sind.",
       "instructions2": "Bitte achten Sie auf die Reihenfolge der Wörter!",
-      "instructions3": "Diese Seed-Phrase wurde aus 100 % Open-Source-Code generiert und verlässt niemals Ihr Gerät.",
-      "generatingYourWallet": "Generierung Ihrer Geldbörse",
+      "instructions3": "Diese Seed-Phrase wurde von 100 % Open-Source-Code generiert und verlässt niemals Ihr Gerät.",
+      "generatingYourWallet": "Generierung Ihrer Wallet",
       "confidential": "Vertraulich"
     },
     "step4": {
       "instructions1": "Bitte validieren",
       "wordNumber": "Wortnummer",
-      "seedWord": "Wort säen",
+      "seedWord": "Seed-Wort",
       "invalidWord": "Ungültiges Wort"
     },
     "step5": {
       "instructions1": "Wallet erfolgreich erstellt",
-      "instructions2": "Bewahren Sie Ihre Samenphrase an einem sicheren Ort auf und zeigen Sie sie niemandem!"
+      "instructions2": "Bewahren Sie Ihre Seed Phrase an einem sicheren Ort auf und zeigen Sie sie niemandem!"
     }
   },
   "accountConfigHook": {
