--- a/src/assets/translations/pt.json
+++ b/src/assets/translations/pt.json
@@ -214,7 +214,7 @@
       "signWithAddressDetails": "Assinar a mensagem com este endereço Bitcoin",
       "receiveInBtcDescription1": "Todas as bitcoins que faturar através da Swiss Bitcoin Pay serão enviadas para o endereço que fornecer.",
       "receiveInBtcDescription2": "As conversões de Lightning para Onchain e as taxas de mineração são sempre gratuitas para si.",
-      "receiveInBtcDescription3": "O pagamento é efectuado todos os dias às 0:00 UTC. O limite mínimo é de 1000 sats.",
+      "receiveInBtcDescription3": "Por defeito, os pagamentos à sua carteira são efectuados todos os dias 1 de cada mês. O limite mínimo é de 1000 sats.",
       "receiveInBtcDescription3Lightning": "As seus bitcoins serão enviadas instantaneamente para o seu endereço lightning após cada pagamento. Certifique-se de que o seu nó está bem conectado.",
       "receiveInBtcDescription4": "É necessária uma assinatura criptográfica da sua carteira Bitcoin para provar a propriedade.",
       "receiveInBankDescription1": "Todas as bitcoins que faturar através da Swiss Bitcoin Pay serão vendidas por {{currency}} e depois enviados automaticamente para a sua conta bancária através do nosso parceiro",
