--- a/src/assets/translations/de.json
+++ b/src/assets/translations/de.json
@@ -185,11 +185,10 @@
       "title": "Konfiguration der Auszahlung",
       "iWantToReceive": "Ich möchte mein Geld erhalten...",
       "in": "in",
-      "fees": "{{percent}}% Gebühren",
+      "fees": "Ab {{percent}}% Gebühren",
       "feesDetails1": "Gebühren",
-      "feesAnyVolume": "Jedes Volumen",
-      "feesDetailsBelow": "Volumen &lt; {{amount}} / Monat",
-      "feesDetailsAbove": "Volumen &gt; {{amount}} / Monat",
+      "feesFirstYear": "1. Jahr der Einschreibung",
+      "feesAfterwards": "Nach dem ersten Jahr",
       "cryptoSignature": "Erforderliche Signatur",
       "instantTransfer": "Sofortige Übertragung",
       "dailyTransfer": "Täglicher Transfer",
