--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -186,11 +186,10 @@
       "title": "Payout configuration",
       "iWantToReceive": "I want to receive my funds...",
       "in": "in",
-      "fees": "{{percent}}% fees",
+      "fees": "From {{percent}}% fees",
       "feesDetails1": "Fees",
-      "feesAnyVolume": "Any volume",
-      "feesDetailsBelow": "Volume < {{amount}} / month",
-      "feesDetailsAbove": "Volume > {{amount}} / month",
+      "feesFirstYear": "1st year of registration",
+      "feesAfterwards": "After the 1st year",
       "cryptoSignature": "Required signature",
       "instantTransfer": "Instant transfer",
       "dailyTransfer": "Daily transfer",
