--- a/src/assets/translations/es.json
+++ b/src/assets/translations/es.json
@@ -185,11 +185,10 @@
       "title": "Configuración de pago",
       "iWantToReceive": "Quiero recibir mis fondos...",
       "in": "en",
-      "fees": "{{percent}}% comisiones",
+      "fees": "Desde el {{percent}}% comisiones",
       "feesDetails1": "Tarifas",
-      "feesAnyVolume": "Cualquier volumen",
-      "feesDetailsBelow": "Volumen < {{amount}} / mes",
-      "feesDetailsAbove": "Volumen > {{amount}} / mes",
+      "feesFirstYear": "1er año de registro",
+      "feesAfterwards": "Después del 1er año",
       "cryptoSignature": "Firma obligatoria",
       "instantTransfer": "Transferencia instantánea",
       "dailyTransfer": "Transferencia diaria",
