--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -186,11 +186,10 @@
       "title": "Configuration des paiements",
       "iWantToReceive": "Je veux recevoir mes fonds...",
       "in": "en",
-      "fees": "{{percent}}% de frais",
+      "fees": "Dès {{percent}}% de frais",
       "feesDetails1": "Frais",
-      "feesAnyVolume": "N'importe quel volume",
-      "feesDetailsBelow": "Volume < {{amount}} / mois",
-      "feesDetailsAbove": "Volume > {{amount}} / mois",
+      "feesFirstYear": "1ère année d'inscription",
+      "feesAfterwards": "Après la 1ère année",
       "cryptoSignature": "Signature obligatoire",
       "instantTransfer": "Transfert instantané",
       "dailyTransfer": "Transfert quotidien",
@@ -228,7 +227,7 @@
       "receiveInBankDescriptionFasterPayments": "Le paiement sur votre compte bancaire en GBP est effectué instantanément via Faster Payments.",
       "createYourBitcoinWallet": "Créez votre portefeuille Bitcoin",
       "iban": "IBAN",
-      "bankReference": "Référence",
+      "bankReference": "Référence de virement",
       "optional": "Optionnel",
       "yourName": "Votre nom d'entreprise ou personnel",
       "ownerName": "Nom du propriétaire",
