--- a/src/assets/translations/it.json
+++ b/src/assets/translations/it.json
@@ -185,11 +185,10 @@
       "title": "Configurazione dei pagamenti",
       "iWantToReceive": "Voglio ricevere i miei fondi...",
       "in": "in",
-      "fees": "commissioni {{percent}}%",
+      "fees": "Commissioni dall'{{percent}}%.",
       "feesDetails1": "Commissioni",
-      "feesAnyVolume": "Qualsiasi volume",
-      "feesDetailsBelow": "Volume < {{amount}} / mese",
-      "feesDetailsAbove": "Volume > {{amount}} / mese",
+      "feesFirstYear": "1° anno di iscrizione",
+      "feesAfterwards": "Dopo il 1° anno",
       "cryptoSignature": "Firma richiesta",
       "instantTransfer": "Trasferimento istantaneo",
       "dailyTransfer": "Trasferimento giornaliero",
