--- a/src/assets/translations/pt.json
+++ b/src/assets/translations/pt.json
@@ -185,11 +185,10 @@
       "title": "Configurações de pagamento",
       "iWantToReceive": "Quero receber os meus fundos...",
       "in": "em",
-      "fees": "{{percent}}% de taxas",
+      "fees": "A partir de {{percent}}% de taxas",
       "feesDetails1": "Taxas",
-      "feesAnyVolume": "Qualquer volume",
-      "feesDetailsBelow": "Volume < {{amount}} / mês",
-      "feesDetailsAbove": "Volume > {{amount}} / mês",
+      "feesFirstYear": "1º ano de inscrição",
+      "feesAfterwards": "Após o 1º ano",
       "cryptoSignature": "Assinatura obrigatória",
       "instantTransfer": "Transferência imediata",
       "dailyTransfer": "Transferência diária",
