--- a/src/assets/translations/es.json
+++ b/src/assets/translations/es.json
@@ -119,6 +119,8 @@
       "status": "Estado",
       "timeLeft": "Tiempo restante",
       "amount": "Importe",
+      "alreadyPaid": "Ya pagado",
+      "payTheRest": "Pagar el resto ({{sats}} sats) a través de Lightning o Onchain",
       "paidOn": "Pagado el",
       "awaitingPayment": "En espera de pago",
       "returningToTerminal": "Volver al terminal",
