--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -222,8 +222,9 @@
       "receiveInBankDescription1": "All the bitcoins that you charge via Swiss Bitcoin Pay will be sold for {{currency}} then sent automatically to your bank account through our partner",
       "bankSettings": "Bank settings",
       "receiveInBankDescription2Instant": "The payment to your bank account is made automatically as soon as your balance exceeds the minimum of {{formattedAmount}}.",
-      "receiveInBankDescription2Batched": "The payment to your bank account is automatically done everyday at 0:00 UTC if your balance exceeds the minimum of {{formattedAmount}}.",
+      "receiveInBankDescription2Batched": "The payment to your bank account is automatically done everyday at 0:00 UTC once your balance exceeds the minimum of {{formattedAmount}}.",
       "receiveInBankDescription2Swift": "Swift transfers in {{currency}} are subject to Swift bank fees, which are not predictable and can represent 5% to 30% additional fees.",
+      "receiveInBankDescription3Swift": "Payment into your bank account is made automatically every 1st of the month once your balance exceeds the minimum of {{formattedAmount}}.",
       "receiveInBankDescription3": "Below this amount, it is also possible to manually trigger a transfer, for a fee of {{formattedAmount}}.",
       "receiveInBankDescriptionInstantSepa": "If your bank is Instant SEPA compatible, you will receive your payments instantly into your bank account.",
       "receiveInBankDescriptionFasterPayments": "The payment to your bank account in GBP is made instantly via Faster Payments.",
