--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -222,8 +222,9 @@
       "receiveInBankDescription1": "Tous les bitcoins que vous recevez via Swiss Bitcoin Pay seront vendus en {{currency}} puis envoyés automatiquement sur votre compte bancaire par l'intermédiaire de notre partenaire",
       "bankSettings": "Paramètres bancaires",
       "receiveInBankDescription2Instant": "Le versement sur votre compte bancaire est effectué automatiquement dès que votre solde dépasse le minimum de {{formattedAmount}}.",
-      "receiveInBankDescription2Batched": "Le versement sur votre compte bancaire est effectué automatiquement tous les jours à 0:00 UTC si votre solde dépasse le minimum de {{formattedAmount}}.",
-      "receiveInBankDescription2Swift": "Les virements Swift sur {{currency}} sont soumis aux frais bancaires Swift, qui ne sont pas prévisibles et peuvent représenter de 5 % à 30 % de frais supplémentaires.",
+      "receiveInBankDescription2Batched": "Le versement sur votre compte bancaire est effectué automatiquement tous les jours à 0:00 UTC une fois que votre solde dépasse le minimum de {{formattedAmount}}.",
+      "receiveInBankDescription2Swift": "Les virements Swift en {{currency}} sont soumis aux frais bancaires Swift, qui ne sont pas prévisibles et peuvent représenter de 5 % à 30 % de frais supplémentaires.",
+      "receiveInBankDescription3Swift": "Le versement sur votre compte bancaire est effectué automatiquement tous les 1er du mois une fois que votre solde dépasse le minimum de {{formattedAmount}}.",
       "receiveInBankDescription3": "En dessous de ce montant, il est également possible de déclencher manuellement un transfert, moyennant des frais de {{formattedAmount}}.",
       "receiveInBankDescriptionInstantSepa": "Si votre banque est compatible Instant SEPA, vous recevrez vos paiements instantanément sur votre compte bancaire.",
       "receiveInBankDescriptionFasterPayments": "Le paiement sur votre compte bancaire en GBP est effectué instantanément via Faster Payments.",
