--- a/src/assets/translations/pt.json
+++ b/src/assets/translations/pt.json
@@ -221,9 +221,10 @@
       "receiveInBankDescription1": "Todas as bitcoins que faturar através da Swiss Bitcoin Pay serão vendidas por {{currency}} e depois enviados automaticamente para a sua conta bancária através do nosso parceiro",
       "bankSettings": "Definições Bancárias",
       "receiveInBankDescription2Instant": "O pagamento para a sua conta bancária é efectuado automaticamente assim que o seu saldo excede o mínimo de {{formattedAmount}}.",
-      "receiveInBankDescription2Batched": "O pagamento para a sua conta bancária é efectuado automaticamente todos os dias às 0:00 UTC se o seu saldo exceder o mínimo de {{formattedAmount}}.",
+      "receiveInBankDescription2Batched": "O pagamento para a sua conta bancária é efectuado automaticamente todos os dias às 0:00 UTC quando o seu saldo exceder o mínimo de {{formattedAmount}}.",
       "receiveInBankDescription2Swift": "As transferências Swift em {{currency}} estão sujeitas a taxas bancárias Swift, que não são previsíveis e podem representar 5% a 30% de taxas adicionais.",
       "receiveInBankDescription3": "Abaixo deste montante, também é possível acionar manualmente uma transferência, mediante o pagamento de uma taxa de {{formattedAmount}}.",
+      "receiveInBankDescription3Swift": "Os pagamentos para a sua conta bancária são efectuados automaticamente todos os dias às 0:00 UTC quando o seu saldo excede o mínimo de {{formattedAmount}}.",
       "receiveInBankDescriptionInstantSepa": "Se o seu banco for compatível com Instant SEPA, receberá os seus pagamentos instantaneamente na sua conta bancária.",
       "receiveInBankDescriptionFasterPayments": "O pagamento para a sua conta bancária em GBP é efectuado instantaneamente através de Faster Payments.",
       "createYourBitcoinWallet": "Criar a sua carteira Bitcoin",
