--- a/src/assets/translations/fr.json
+++ b/src/assets/translations/fr.json
@@ -223,7 +223,7 @@
       "bankSettings": "Paramètres bancaires",
       "receiveInBankDescription2Instant": "Le versement sur votre compte bancaire est effectué automatiquement dès que votre solde dépasse le minimum de {{formattedAmount}}.",
       "receiveInBankDescription2Batched": "Le versement sur votre compte bancaire est effectué automatiquement tous les jours à 0:00 UTC une fois que votre solde dépasse le minimum de {{formattedAmount}}.",
-      "receiveInBankDescription2Swift": "Les virements Swift en {{currency}} sont soumis aux frais bancaires Swift, qui ne sont pas prévisibles et peuvent représenter de 5 % à 30 % de frais supplémentaires.",
+      "receiveInBankDescription2Swift": "Les virements Swift en {{currency}} sont soumis aux frais bancaires Swift, qui ne sont pas prévisibles et peuvent représenter de {{formattedAmountLow}} à {{formattedAmountHigh}} de frais supplémentaires.",
       "receiveInBankDescription3Swift": "Le versement sur votre compte bancaire est effectué automatiquement tous les 1er du mois une fois que votre solde dépasse le minimum de {{formattedAmount}}.",
       "receiveInBankDescription3": "En dessous de ce montant, il est également possible de déclencher manuellement un transfert, moyennant des frais de {{formattedAmount}}.",
       "receiveInBankDescriptionInstantSepa": "Si votre banque est compatible Instant SEPA, vous recevrez vos paiements instantanément sur votre compte bancaire.",
